--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   app_links: ^4.0.0
   intl: ^0.19.0 # Use the latest version from pub.dev
   shared_preferences: ^2.0.15 # or latest
+  percent_indicator: ^4.2.2
 
 
 
